--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -15,3 +15,11 @@ body,
 .icon-btn {
   font-size: 0.9em;
 }
+
+::-webkit-scrollbar-thumb {
+  background: rgba(90, 90, 90);
+}
+
+::-webkit-scrollbar-track {
+  background: rgba(0, 0, 0, 0.2);
+}
